# shelfman

./: .gitmodules  Makefile  README.md  shelfman-qrcode.py
src/: Makefile  gfxtest.c  shelfman-qrcode.c
src/rp2040/: RUN.sh  ptouch_rp2040.c
src/rp2040/blink/: CMakeLists.txt  main.c
src/rp2040/qrcode/: CMakeLists.txt  ptouch_rp2040.c  rp2040.c  rp2040.h  tusb_config.h
src/rp2040/uart_test/: CMakeLists.txt  main.c
